--- a/TpRails/app/views/welcome/index.html.erb
+++ b/TpRails/app/views/welcome/index.html.erb
@@ -1,4 +1,6 @@
-<h2>Hello World</h2>
+<h1>Welcome in Ruby app</h1>
 <p>
   The time is now: <%= Time.now %>
 </p>
+
+<%= link_to 'View Dashboards', controller: 'dashboards' %>
