Add link to show dashboard

--- a/TpRails/app/views/dashboards/index.html.erb
+++ b/TpRails/app/views/dashboards/index.html.erb
@@ -10,6 +10,7 @@
     <tr>
       <td><%= dashboard.title %></td>
       <td><%= dashboard.dateArchive %></td>
+      <td><%= link_to 'Show', dashboard_path(dashboard) %></td>
     </tr>
   <% end
  end %>
