Save Archive in mongolab on date 01/01/2015

--- a/TpRails/app/views/dashboards/index.html.erb
+++ b/TpRails/app/views/dashboards/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <tr>
     <th>Title</th>
-    <th>Date</th>
+    <th>Hour</th>
   </tr>
  <% if !@dashboards.nil?
     @dashboards.each do |dashboard| %>
