--- a/TpRails/app/views/dashboards/new.html.erb
+++ b/TpRails/app/views/dashboards/new.html.erb
@@ -7,8 +7,8 @@
   </p>
  
   <p>
-    <%= f.label :dateArchive,'Archive date (Between : 2012/10/12 and today in format : yyyy/mm/dd )' %><br>
-    <%= f.date_field :dateArchive %>
+    <%= f.label :dateArchive,'Archive Hour in 01/01/2015 (Between : 00h  and 23h in format : HH )' %><br>
+    <%= f.text_field  :dateArchive %>
   </p>
  
   <p>
