--- a/TpRails/app/views/dashboards/show.html.erb
+++ b/TpRails/app/views/dashboards/show.html.erb
@@ -4,8 +4,8 @@
 </p>
  
 <p>
-  <strong>Text:</strong>
-  <%= @dashboard.dateArchive %>
+  <strong>Hour :</strong>
+  <%= @dashboard.dateArchive %><p> h</p>
 </p>
 
 <%= link_to 'Back', dashboards_path %>
